multiple overflow problem solved

--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-  overflow: hidden;
-}
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+
+html{
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+
 /*sidenav */
 li {
   position: relative;
